# foundational-llm-chat

./: .gitignore  CHANGELOG.md  DEEPSEEK_R1_CONFIG.md  NOTICE  README.md  cdk.json  eslint.config.mjs  lint-staged.config.mjs  package-lock.json  package.json
chainlit_image/: .dockerignore  Dockerfile
chainlit_image/foundational-llm-chat_app/: app.py  chainlit.md  config.py  content_management_utils.py  massages_utils.py  pyproject.toml  requirements.txt  system_prompt.py  system_strings.py  thinking_manager.py
chainlit_image/foundational-llm-chat_app/.chainlit/: config.toml
chainlit_image/foundational-llm-chat_app/.chainlit/translations/: bn.json  de-DE.json  el-GR.json  en-US.json  es.json  fr-FR.json  gu.json  he-IL.json  hi.json  ja.json  kn.json  ko.json  ml.json  mr.json  nl.json  ta.json  te.json  zh-CN.json  zh-TW.json
chainlit_image/foundational-llm-chat_app/config/: __init__.py  app_config.py  settings.py
chainlit_image/foundational-llm-chat_app/public/: logo.css
chainlit_image/foundational-llm-chat_app/services/: __init__.py  content_service.py  thinking_service.py
chainlit_image/foundational-llm-chat_app/utils/: __init__.py  message_utils.py
custom_resources/lambda/cloudFront_get_prefix_list/: cloudFront_get_prefix_list.py
lib/: foundational-llm-chat-stack.ts
lib/authentication/: index.ts
lib/custom/: index.ts
lib/data_layer/: index.ts
lib/ecs/: index.ts
lib/network/: index.ts
lib/parameters/: index.ts
lib/prompts/: index.ts
