[project]
name = "foundational-llm-chat-app"
version = "0.1.0"
description = "Example Chainlit-based UI for talking to Foundation Models on Amazon Bedrock"
requires-python = ">=3.13"
dependencies = [
    "boto3==1.40.46",
    "chainlit==2.8.3",
    "pillow==11.3.0",
]

[dependency-groups]
dev = [
    "ruff>=0.13.2",
]